@@ -52,6 +52,10 @@
     </dependency>
     <dependency>
       <groupId>org.dice_research</groupId>
+      <artifactId>ldcbench.microdata-gen</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.dice_research</groupId>
       <artifactId>ldcbench.html-embd-node</artifactId>
     </dependency>
     <dependency>
@@ -149,8 +153,8 @@
           </execution>
         </executions>
         <configuration>
-          <!-- Mark the shaded artifact instead of overwriting the original 
-            artifact. It should also neither be installed nor deployed together with 
+          <!-- Mark the shaded artifact instead of overwriting the original
+            artifact. It should also neither be installed nor deployed together with
             other artifacts. -->
           <finalName>${project.artifactId}-shaded</finalName>
           <!-- filter all the META-INF files of other artifacts -->
@@ -177,13 +181,15 @@
           </transformers>
         </configuration>
       </plugin>
-      <!-- Surefire plugin mentioned here to make sure that the shade plugin 
+      <!-- Surefire plugin mentioned here to make sure that the shade plugin
         is executed before the tests are started -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <skip>${skipTestPhase}</skip>
+          <!-- We need to open the java.util package to be accessed via reflection by the SDK -->
+          <argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
           <systemPropertyVariables>
             <sdkJarFilePath>${project.build.directory}/${project.artifactId}-shaded.jar</sdkJarFilePath>
           </systemPropertyVariables>
